# yul-dsl-monorepo

./: .envrc  .hlint.yaml  Makefile  README.md  TODO.md  all.ghc-9.12.2.cabal.project.freeze  cabal.project  cabal.project.freeze  examples.cabal.project  flake.nix  yolc.cabal.project
.devcontainer/: devcontainer-feature.json  devcontainer.json  fix-devcontainer.sh  setup-nix.sh
3rd-parties/: cabal.project
examples/demo/: .ghci  foundry.toml  yol-demo.cabal
examples/demo/fork-test/: RaisingFund.t.sol
examples/demo/src/: Counter.hs  Demo.hs  ERC20.hs  Project.hs  RaisingFund.hs
examples/demo/test/: Counter.t.sol  ERC20.t.sol
hs-pkgs/eth-abi/: README.md  eth-abi.cabal
hs-pkgs/eth-abi/internal/simple-np/src/Data/: SimpleNP.hs  TupleN.hs
hs-pkgs/eth-abi/internal/simple-np/src/Data/TupleN/: TH.hs
hs-pkgs/eth-abi/src/Ethereum/: ContractABI.hs
hs-pkgs/eth-abi/src/Ethereum/ContractABI/: ABICoreType.hs  ABITypeCodec.hs  ABITypeCoercible.hs  ABITypeable.hs
hs-pkgs/eth-abi/src/Ethereum/ContractABI/CoreType/: ADDR.hs  BOOL.hs  BYTESn.hs  INTx.hs  NP.hs
hs-pkgs/eth-abi/src/Ethereum/ContractABI/ExtendedType/: REF.hs  SELECTOR.hs  TPL.hs  TUPLEn.hs
hs-pkgs/eth-abi/test/: ABITypeCodec_golden.hs  INTx_prop.hs  Main.hs
hs-pkgs/eth-abi/test/lib/Ethereum/ContractABI/: Arbitrary.hs
hs-pkgs/simple-sop/: simple-sop.cabal
hs-pkgs/simple-sop/src/Data/: SimpleNP.hs  TupleN.hs
hs-pkgs/simple-sop/src/Data/SimpleNP/: ConstructibleNP.hs
hs-pkgs/simple-sop/src/Data/TupleN/: TH.hs
hs-pkgs/simple-sop/src/Data/Type/: Function.hs
hs-pkgs/simple-sop/test/: FunctionType_test.hs  KnownBool.hs  Main.hs  TupleN_test.hs
hs-pkgs/yol-suite/: yol-suite.cabal
hs-pkgs/yol-suite/src/YolSuite/: ReplUtils.hs
hs-pkgs/yol-suite/src/YolSuite/YOLC/: Builder.hs  RunYolModes.hs
hs-pkgs/yol-suite/src/YolSuite/YOLC/Templates/: SingletonContract.hs
hs-pkgs/yol-suite/src/YulDSL/CodeGens/: GraphVizGen.hs
hs-pkgs/yol-suite/testsuite/: .ghci  foundry.toml  yol-testsuite.cabal
hs-pkgs/yol-suite/testsuite/src/: Basic_Tests.hs  Num_Tests.hs
hs-pkgs/yol-suite/testsuite/test/: Num.t.sol
hs-pkgs/yul-dsl/: yul-dsl.cabal
hs-pkgs/yul-dsl-linear-smc/: yul-dsl-linear-smc.cabal
hs-pkgs/yul-dsl-linear-smc/internal/lvm/Control/: LinearlyVersionedMonad.hs
hs-pkgs/yul-dsl-linear-smc/internal/lvm/Control/LinearlyVersionedMonad/: Combinators.hs  LVM.hs  LVMVar.hs
hs-pkgs/yul-dsl-linear-smc/internal/lvm/Data/: LinearContext.hs
hs-pkgs/yul-dsl-linear-smc/src/Control/Category/Constrained/: YulDSL.hs
hs-pkgs/yul-dsl-linear-smc/src/Data/MPOrd/: YulDSL.hs
hs-pkgs/yul-dsl-linear-smc/src/Data/Num/Linear/: YulDSL.hs
hs-pkgs/yul-dsl-linear-smc/src/Prelude/: YulDSL.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Effects/: LinearSMC.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Effects/LinearSMC/: Storage.hs  YulMonad.hs  YulPort.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Haskell/: LibLinearSMC.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Haskell/Data/: SHMap.hs  SMap.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Haskell/Effects/: LinearSMC.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Haskell/Effects/LinearSMC/: LinearFn.hs  LinearYulCat.hs  Storage.hs  YLVM.hs  YulLVM.hs  YulMonad.hs  YulPort.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/Haskell/YulUtils/: LinearSMC.hs
hs-pkgs/yul-dsl-linear-smc/src/YulDSL/YulCatObj/Prelude/Linear/: Num.hs
hs-pkgs/yul-dsl-linear-smc/test/: LinearFn_prop.hs  LinearFn_t.hs  LinearFn_tests.hs  Main.hs  Num_prop.hs  YLVM_Fn_t.hs  YulPortNum_t.hs  YulPortNum_tests.hs  YulPorts_Fn_t.hs
hs-pkgs/yul-dsl-pure/: yul-dsl-pure.cabal
hs-pkgs/yul-dsl-pure/src/Control/: Category.hs  IfThenElse.hs  PatternMatchable.hs
hs-pkgs/yul-dsl-pure/src/Data/: ExoFunctor.hs  MPOrd.hs
hs-pkgs/yul-dsl-pure/src/Data/Type/: Function.hs
hs-pkgs/yul-dsl-pure/src/YulDSL/Haskell/: Lib.hs  LibPure.hs  YulCat.hs  YulUtils.hs
hs-pkgs/yul-dsl-pure/src/YulDSL/Haskell/Effects/: Pure.hs
hs-pkgs/yul-dsl-pure/src/YulDSL/Haskell/Lib/: BaseInstances.hs  Instances.hs  PureFn.hs  TH.hs
hs-pkgs/yul-dsl-pure/src/YulDSL/Haskell/YulCatObj/: BOOL.hs  LabeledINTx.hs  Maybe.hs  NP.hs  TPL.hs  TUPLEn.hs
hs-pkgs/yul-dsl-pure/src/YulDSL/Haskell/YulUtils/: Pure.hs
hs-pkgs/yul-dsl-pure/test/: Data_Type_Function_t.hs  Fn_t.hs  Fn_tests.hs  Main.hs  TestCommon.hs
hs-pkgs/yul-dsl/src/CodeGenUtils/: CodeFormatters.hs  Variable.hs
hs-pkgs/yul-dsl/src/YulDSL/: Core.hs  Eval.hs
hs-pkgs/yul-dsl/src/YulDSL/CodeGens/: ShowGens.hs  YulGen.hs
hs-pkgs/yul-dsl/src/YulDSL/CodeGens/Yul/Internal/: CodeGen.hs  FunctionGen.hs  ObjectGen.hs  RhsExpr.hs
hs-pkgs/yul-dsl/src/YulDSL/CodeGens/Yul/Internal/BuiltIns/: Arithmetic.hs
hs-pkgs/yul-dsl/src/YulDSL/Core/: YulBuiltIn.hs  YulCallSpec.hs  YulCat.hs  YulCatObj.hs  YulEffect.hs  YulLib.hs  YulNum.hs  YulObject.hs
hs-pkgs/yul-dsl/src/YulDSL/StdBuiltIns/: ABICodec.hs  Exception.hs  Prelude.hs  Runtime.hs  ValueType.hs
hs-pkgs/yul-dsl/src/YulDSL/YulCatObj/Prelude/Base/: Maybe.hs  Num.hs
hs-pkgs/yul-dsl/test/: Eval_prop.hs  Main.hs  TestCommon.hs  YulGen_tests.hs
