Cabal-Version:  3.4
name:           yol-demo
version:        0.1
category:       control
synopsis:       Examples built with yolc (A YulDSL/Haskell Compiler)

license:        MIT
license-file:   LICENSE
author:         Miao, ZhiCheng
maintainer:     hellwolf@yolc.dev
copyright:      (c) 2023-2024 Miao, ZhiCheng

tested-with:    GHC==9.6.2
build-type:     Simple


--------------------------------------------------------------------------------
-- !! THE CODE BELOW SHOULD BE MANAGED BY ATTILA !!
--------------------------------------------------------------------------------
-- BEGIN attila-cabal-section
common yol-module-options
    default-language:     GHC2024
    ghc-options:          -Wall
                          -Wcompat
                          -Wunused-packages
                          -Wno-missing-signatures
    default-extensions:   UnicodeSyntax
                          ViewPatterns
                          BlockArguments
                          RebindableSyntax
                          OverloadedStrings
                          QualifiedDo
                          ImpredicativeTypes
                          LinearTypes
                          TemplateHaskell
common base-mixins-options
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base)
    build-depends:        base >= 4.13 && < 666
-- END attila-cabal-section

--------------------------------------------------------------------------------
-- !! THIS SECTION SHOULD BE MAINTAINED BY YOU !!
--------------------------------------------------------------------------------
library
  import:           yol-module-options
  hs-source-dirs:   src
  exposed-modules:  ERC20
                    Counter
                    Demo
                    Project
  build-depends:    yul-dsl-linear-smc,
                    yol-suite,
                    base,
                    -- text >= 2.0.1,
                    -- bytestring >= 0.11,
                    -- yul-dsl,
