cabal-version:  3.4
name:           eth-abi
version:        0.1.0.0
category:       Data Structures
synopsis:       Ethereum contract ABI specification in Haskell
description:    These include Ethereum contract ABI specification, https://docs.soliditylang.org/en/latest/abi-spec.html
                implemented in Haskell types, their derived types, and dependently typed variants of some.

license:        MIT
license-file:   MIT-LICENSE
author:         Miao, ZhiCheng
maintainer:     helwolf@yolc.dev
copyright:      (c) 2024-2025 Miao, ZhiCheng

extra-doc-files:  README.md
-- extra-doc-files:  CHANGELOG.md

build-type:     Simple
tested-with:    GHC==9.10.1, GHC==9.12.2

common basic-options
  default-language:   GHC2024
  ghc-options:        -Wall
                      -Wcompat
                      -Wunused-packages
  default-extensions: TypeFamilies
                      FunctionalDependencies
                      TypeAbstractions
                      RequiredTypeArguments
  build-depends:      base >= 4.20.0.0 && < 666

library
  import:         basic-options
  hs-source-dirs: src
  build-depends:  bytestring >= 0.11,
                  template-haskell >= 2.22,
                  constraints >= 0.13,
                  crypton >= 0.32,
                  memory >= 0.18,
                  cereal >= 0.5,
                  simple-sop
  -- modules
  exposed-modules:
    -- core type machinery
    Ethereum.ContractABI.ABICoreType
    Ethereum.ContractABI.ABITypeable
    Ethereum.ContractABI.ABITypeCodec
    Ethereum.ContractABI.ABITypeCoercible
    -- core types
    Ethereum.ContractABI.CoreType.NP
    Ethereum.ContractABI.CoreType.BOOL
    Ethereum.ContractABI.CoreType.ADDR
    Ethereum.ContractABI.CoreType.INTx
    Ethereum.ContractABI.CoreType.BYTESn
    -- extended types
    Ethereum.ContractABI.ExtendedType.REF
    Ethereum.ContractABI.ExtendedType.TUPLEn
    Ethereum.ContractABI.ExtendedType.SELECTOR
    -- main export
    Ethereum.ContractABI
  other-modules:
    Internal.Data.Type.Bool
  reexported-modules:
    -- simple-np
    Data.SimpleNP,
    Data.TupleN

library lib-test
  import:           basic-options
  visibility:       public
  hs-source-dirs:   test/lib
  build-depends:    QuickCheck >= 2.15,
                    eth-abi
  -- modules
  exposed-modules:
    Ethereum.ContractABI.Arbitrary

Test-Suite test-eth-abi
  import:           basic-options
  ghc-options:      -Wno-missing-signatures
  type:             exitcode-stdio-1.0
  build-depends:    QuickCheck >= 2.15,
                    hspec >= 2.11,
                    eth-abi
  hs-source-dirs:   test
  -- modules
  other-modules:
    INTx_prop
  main-is: Main.hs
