Cabal-Version:  3.4
name:           yul-dsl-linear-smc
version:        0.1.0.0
category:       Language
synopsis:       YulDSL/Haskell's support for side effects using linear types
description:    YulDSL/Haskell is the Embedded domain-specific language (EDSL) in Haskell using YulDSL.

                This package is one of its front ends called YulDSL/Haskell, which embeds YulDSL in Haskell.

                The front end uses a technique called "evaluating linear functions to symmetric monoidal categories
                (Jean-Philippe Bernardy and Arnaud Spiwack)" to provide an ergonomic linear functions programming
                environment for the YulDSL.

                The front end also provides a new type of linear safety using linearly versioned monad, where all data
                effects are linearly versioned and tracked as types. Linearly versioned monad aims to eliminate a class
                of program safety issues arising from using out-of-date data obtained from side effects.

license:        LGPL-3.0-or-later
license-file:   LGPL-3.0-LICENSE
author:         Miao, ZhiCheng
maintainer:     hellwolf@yolc.dev
copyright:      (c) 2023-2025 Miao, ZhiCheng

extra-doc-files:  README.md
-- extra-doc-files:  CHANGELOG.md

tested-with:    GHC==9.10.1
build-type:     Simple

common basic-options
  default-language:   GHC2024
  ghc-options:        -Wall
                      -Wcompat
                      -Wunused-packages
  default-extensions: UnicodeSyntax
                      BlockArguments
                      QualifiedDo
                      NoImplicitPrelude
                      ImpredicativeTypes
                      LinearTypes
  build-depends:      base >= 4.20.0.0 && < 666

library
  import:             basic-options
  default-extensions: TypeFamilies
                      RequiredTypeArguments
  hs-source-dirs:     src
  build-depends:      constraints >= 0.13,
                      template-haskell >= 2.22,
                      linear-base >= 0.5.0,
                      linear-smc >= 2.2.3,
                      yul-dsl,
                      yul-dsl-pure,
                      yul-dsl-linear-smc:linearly-versioned-monad
  -- modules
  exposed-modules:
    -- YulDSL/Haskell's linear-base instances
    Data.Num.Linear.YulDSL
    -- YulDSL/Haskell's linear-smc instances
    Control.Category.Constrained.YulDSL
    -- YulDSL/Haskell's LinearSMC Effect
    YulDSL.Haskell.Effects.LinearSMC.YulPort
    YulDSL.Haskell.Effects.LinearSMC.LinearYulCat
    YulDSL.Haskell.Effects.LinearSMC.YLVM
    YulDSL.Haskell.Effects.LinearSMC.LinearFn
    YulDSL.Haskell.Effects.LinearSMC.Storage
    YulDSL.Haskell.Effects.LinearSMC
    -- YulDSL/Haskell's Utils
    YulDSL.Haskell.LibLinearSMC
    YulDSL.Haskell.Data.SHMap
    -- Prelude
    Prelude.YulDSL
  reexported-modules:
    Data.LinearContext,
    Control.LinearlyVersionedMonad.LVM

library linearly-versioned-monad
  import:         basic-options
  visibility:     private
  hs-source-dirs: ./internal/lvm
  build-depends:  constraints >= 0.13,
                  deepseq >= 1.5,
                  linear-base >= 0.5.0,
                  simple-sop
  -- modules
  exposed-modules:
    Data.LinearContext
    Control.LinearlyVersionedMonad.LVM
    Control.LinearlyVersionedMonad.Combinators
    Control.LinearlyVersionedMonad.LVMVar
  other-modules:
    -- support linear types for constraints package
    Data.Constraint.Linear

Test-Suite test-yul-dsl-linear-smc
  import:             basic-options
  ghc-options:        -Wno-missing-signatures
  type:               exitcode-stdio-1.0
  default-extensions: BlockArguments
                      TemplateHaskell
                      ViewPatterns
                      RebindableSyntax
  hs-source-dirs:     test
  build-depends:      hspec >=2.11,
                      QuickCheck >=2.13,
                      yul-dsl,
                      yul-dsl-linear-smc
  -- modules
  other-modules:
    LinearFn_t
    YulPortNum_t
  main-is: Main.hs
