cabal-version:  3.4
name:           yul-dsl
version:        0.1.0.0
category:       Language
synopsis:       YulDSL - An EDSL targets Solidity\/Yul
description:    YulDSL provides an embedded domain-specific language (EDSL) called 'YulDSL' in Haskell that targets
                olidiy\/Yul code.

                It is a DSL that bases itself on category theory, which makes it possible to have different front ends
                that all target to YulDSL.

                One such working front end is YulDSL\/Haskell (package: yul-dsl-linear-smc).

                Furthermore, in the future, 'YulDSL' can be serialized into a portable artifact, thereby enabling
                various front ends, such as a visual programming interface or other YulDSL-supported programming
                languages to produce and share 'YulDSL' as portable modules with each other.

license:        LGPL-3.0-or-later
license-file:   LGPL-3.0-LICENSE
author:         Miao, ZhiCheng
maintainer:     helwolf@yolc.dev
copyright:      (c) 2023-2025 Miao, ZhiCheng

extra-doc-files:     README.md
-- extra-doc-files:  CHANGELOG.md

tested-with:    GHC==9.10.1
build-type:     Simple

common basic-options
  default-language:   GHC2024
  default-extensions: OverloadedRecordDot
  ghc-options:        -Wall
                      -Wunused-packages
  build-depends:      base >= 4.20.0.0 && < 666

library
  import:             basic-options
  hs-source-dirs:     src
  default-extensions: TypeFamilies
  build-depends:      eth-abi ^>= 0.1.0.0,
                      template-haskell >= 2.22,
                      constraints >= 0.14,
                      bytestring >= 0.11,
                      crypton >= 0.32,
                      memory >= 0.18,
                      text >= 2.0.1,
                      containers >= 0.6.7,
                      mtl >= 2.3.1
  -- modules
  exposed-modules:
    -- YulDSL Core
    YulDSL.Core.YulCatObj
    YulDSL.Core.YulBuiltIn
    YulDSL.Core.YulCat
    YulDSL.Core.YulObject
    YulDSL.Core
    -- YulDSL Built-Ins
    YulDSL.StdBuiltIns.Prelude
    YulDSL.StdBuiltIns.Exception
    YulDSL.StdBuiltIns.ValueType
    YulDSL.StdBuiltIns.ABICodec
    -- YulDSL Eval
    YulDSL.Eval
    -- YulDSL CodeGen
    YulDSL.CodeGens.YulGen
    -- YulDSL/Haskell Essentials
    YulDSL.YulCatObj.Prelude.Base.Maybe
    YulDSL.YulCatObj.Prelude.Base.Num
    YulDSL.Effects.Pure
  other-modules:
    -- CodeGen Utils
    CodeGenUtils.CodeFormatters
    CodeGenUtils.Variable
    -- Extra Control patterns
    Control.PatternMatchable
    Control.IfThenElse
    -- Yul CodeGen Internals
    YulDSL.CodeGens.Yul.Internal.RhsExpr
    YulDSL.CodeGens.Yul.Internal.CodeGen
    YulDSL.CodeGens.Yul.Internal.FunctionGen
    YulDSL.CodeGens.Yul.Internal.ObjectGen

Test-Suite test-yul-dsl
  import:             basic-options
  type:               exitcode-stdio-1.0
  default-extensions: BlockArguments
                      TemplateHaskell
  ghc-options:        -Wno-missing-signatures
  hs-source-dirs:     test
  build-depends:      QuickCheck >=2.13,
                      hspec >=2.11,
                      eth-abi,
                      yul-dsl
  -- modules
  other-modules:
    TestCommon
    Fn_prop
    Eval_prop
  main-is: Main.hs
